Revision history for Perl extension Date::Holidays::EnglandWales.

0.10  Mon Sep 12 10:52:00 2022
    - Update changes file after adding State Funeral of Queen Elizabeth II

0.09  Mon Sep 12 10:49:00 2022
    - Bank holiday for the State Funeral of Queen Elizabeth II

0.08  Sat Apr 16 13:11:00 2022
    - Move Spring Bank Holiday and add Platinum Jubilee

0.07  Sat Apr 16 17:50:00 2011
    - Drop Time::Piece and use DateTime instead - courtesy of David
        Precious (http://www.preshweb.co.uk/)

0.06  Tue Nov 23 15:22:00 2010
    - Add 29 April 2011 Bank Holiday for Wedding of Prince William 
        and Kate Middleton

0.05  Mon Feb  1 14:45:00 2010
    - If the 27th Dec is either Mon or Tue it means Christmas Day was 
      Saturday or Sunday so both Mon and Tue are bank holidays
        Thanks again to Lee Johnson for his eagle eye :)
      This also means the Chrismas Day bank holiday can be on 26th.

0.04  Mon Feb  1 12:20:00 2010
    - Boxing Day holiday can be either Mon or Tue if it's the 28th.

0.03  Mon Feb  1 12:10:00 2010
    - Boxing Day holiday moves to Tue is Christmas Day is Saturday or Sunday.
        Thanks for Lee Johnson for catching this one
    - Corrected dependency to include Time::Seconds

0.02  Fri Jan 29 09:59:00 2010
    - Doesn't require perl 5.10 - set it to 5.8 which should be enough.
    - Correct bug in Easter functions
    - Remove print statement

0.01  Thu Jan 28 17:48:21 2010
	- initial release
